Fix the logo z-index

--- a/app/00_src/css/04_layout/_header.styl
+++ b/app/00_src/css/04_layout/_header.styl
@@ -14,6 +14,7 @@
 
         +desktop()
             position absolute
+            z-index 11
             top $gap
             left $gap
 
